Rough finish of the remove method.

--- a/UnitTestProjectAdd/UnitTestProjectAdd.csproj
+++ b/UnitTestProjectAdd/UnitTestProjectAdd.csproj
@@ -52,6 +52,7 @@
     <Compile Include="UnitTestRemove.cs" />
     <Compile Include="UnitTestAdd.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTestToString.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CustomList\CustomList.csproj">
