--- a/UnitTestProjectAdd/UnitTestProjectAdd.csproj
+++ b/UnitTestProjectAdd/UnitTestProjectAdd.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="UnitTest+Overload.cs" />
+    <Compile Include="UnitTestMinusOverload.cs" />
     <Compile Include="UnitTestRemove.cs" />
     <Compile Include="UnitTestAdd.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
